@@ -36,6 +36,7 @@
 	<script src="../../resources/jquery/jquery.autoEllipsis.js"></script>
 	<script src="../../resources/jquery/jquery.colorUtil.js"></script>
 	<script src="../../resources/jquery/jquery.tabIndex.js"></script>
+	<script src="../../resources/mediawiki/mediawiki.Title.js"></script>
 
 	<!-- QUnit: Load framework -->
 	<link rel="stylesheet" href="../../resources/jquery/jquery.qunit.css" />
@@ -52,6 +53,7 @@
 	<script src="suites/resources/jquery/jquery.autoEllipsis.js"></script>
 	<script src="suites/resources/jquery/jquery.colorUtil.js"></script>
 	<script src="suites/resources/jquery/jquery.tabIndex.js"></script>
+	<script src="suites/resources/mediawiki/mediawiki.Title.js"></script>
 
 	<!-- TestSwarm: If a test swarm is running this,
 	     the following script will allow it to extract the results.
